# media-manager-tauri

./: .gitignore  .prettierignore  LICENSE  README.md  UI设计规范.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/api/: index.ts  library.ts  media.ts  rag.ts  series.ts  settings.ts  tags.ts
src/components/: AudioPlayer.tsx  ComicReader.tsx  DetailModal.tsx  ErrorBoundary.tsx  ImportDialog.tsx  Library.tsx  RagPanel.tsx  SaveDataDirDialog.tsx  Settings.tsx  TagInput.tsx  VideoPlayer.tsx
src/context/: AppContext.tsx  PlayerContext.tsx  QueryContext.tsx  index.ts
src/hooks/: index.ts  useCoverCache.ts  useDebounce.ts  useLibrary.ts  useQueryHooks.ts  useTagFilter.ts  useTags.ts  useTheme.ts
src/styles/: global.css  library.css  modal.css  player.css  taginput.css  variables.css
src/test/: ErrorBoundary.test.tsx  api.test.ts
src/types/: app.ts  index.ts  media.ts
